three, OrbitControl改為使用import 匯入

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta http-equiv="Expires" content="0">
 
     <!-- 引用three.js -->
-    <script src="js/three.min.js"></script>
+    <!-- <script src="js/three.min.js"></script> -->
     <!-- 引用OrbitControls -->
-    <script src="js/OrbitControls.js"></script>
+    <!-- <script src="js/OrbitControls.js"></script> -->
 
     <script type="module" src="./openFile.js"></script>
     <script type="module" src="./main.js"></script>
