1.新增Edge 2.點選Edge功能

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
             border: 1px solid #ccc; /* 边框样式，仅作示例 */
         }
 
+        #propertyDiv {
+            width: 300px;
+            height: 500px; /* 设置高度，仅作示例 */
+            float: left;
+            box-sizing: border-box;
+            border: 1px solid #ccc; /* 边框样式，仅作示例 */
+        }
+
         .tree{
             --spacing : 1.5rem;
             --radius  : 10px;
@@ -135,6 +143,10 @@
     </div>
 
     <div id="modelViewDiv">
+    </div>
+
+    <div id="propertyDiv">
+        <p id="length"></p>
     </div>
 
 
